--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD operation</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div>
       <h2>Form</h2>
-      <form id="userForm">
+      <form id="myForm">
         <input type="text" id="name" placeholder="Name" />
         <input type="text" id="address" placeholder="Address" />
         <input type="text" id="age" placeholder="Age" />
@@ -19,7 +20,7 @@
           <option value="UK">UK</option>
           <option value="Canada">Canada</option>
         </select>
-        <input type="submit" value="Submit" />
+        <button id="btn">Click here</button>
       </form>
       <br />
       <h2>List</h2>
